# SmartIME

./: .cursorrules  .env.llm.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN_DOC.md  README.md  REQUIREMENTS.md  TASKS.md  TECHNICAL_SPEC.md  package.json
.github/workflows/: release-dmg.yml
app/: globals.css  layout.tsx  page.tsx
app/onboarding/: page.tsx
app/onboarding/llm/: page.tsx
app/onboarding/permission/: page.tsx
app/onboarding/scan/: page.tsx
app/rules/: page.tsx
app/settings/general/: page.tsx
app/settings/rules/: page.tsx
components/: window-resizer.tsx
components/layout/: app-layout.tsx  header.tsx  sidebar.tsx
components/motion/: fade-in.tsx  scale-in.tsx  slide-in.tsx
components/settings/rules/: input-method-selector.tsx
docs/: DESIGN_DOC.md  REQUIREMENTS.md  Rulebook.md  TASKS.md  TECHNICAL_SPEC.md
docs/exec-plan/: 2026-06-08-system-apps-and-input-indicator.md  2026-06-09-remove-input-indicator.md  2026-06-11-localized-input-source-names.md  2026-06-12-rule-app-icons.md  README.md
lib/: api.ts  window-size.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  command.rs  config.rs  error.rs  general_settings.rs  input_source.rs  llm.rs  main.rs  observer.rs  single_instance.rs  system_apps.rs
