[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-core = "2.0.0-beta.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tauri-plugin-store = "2.0.0-beta"
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10.1"
dotenvy = "0.15.7"
dirs = "6.0.0"
once_cell = "1.21.3"
thiserror = "2.0.18"
anyhow = "1.0.100"
walkdir = "2.5.0"
plist = "1.7.4"
